force-app/main/default/objects/JBCXM__AppEvents__c/JBCXM__AppEvents__c.object-meta.xml
<CustomObject>
    <label>App Events</label>
    <nameField>
        <label>App Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>