force-app/main/default/objects/JBCXM__AppEvents__c/fields/JBCXM__App_Event_Object__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__App_Event_Object__c</fullName>
    <label>App Event Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>