force-app/main/default/objects/JBCXM__AppEvents__c/fields/JBCXM__FormatText__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FormatText__c</fullName>
    <label>FormatText</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>