force-app/main/default/objects/JBCXM__AppEvents__c/fields/JBCXM__IsAccountBased__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsAccountBased__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to know whether this event get delivered on account subscription or not</description>
    <label>Account based subscription event</label>
    <type>Checkbox</type>
</CustomField>