force-app/main/default/objects/JBCXM__AppEvents__c/fields/JBCXM__UID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UID__c</fullName>
    <label>Unique Identifier</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>